fix projects title spacing with content

--- a/styles/style.css
+++ b/styles/style.css
@@ -277,6 +277,10 @@ canvas {
         text-align: center;
     }
 
+    .projects{
+        padding-top: 5vh;
+    }
+
     .box {
         max-width: 300px;
         width: fit-content;
